--- a/223-Lab10-FilesExceptions.ipynb
+++ b/223-Lab10-FilesExceptions.ipynb
@@ -49,17 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
     "from random import randint\n",
-    "listA = [ \"A+\", \"A\", \"B+\", \"B\", \"C+\", \"C\", \"D+\",\" D\",\"F\"]\n",
-    "fileA = open(\"LetterGrades\",\"w\")\n",
+    "listA = [ \"A+\", \"A\", \"B+\", \"B\", \"C+\", \"C\", \"D+\",\"D\",\"F\"]\n",
+    "fileA = open(\"LetterGrades.txt\",\"w\")\n",
     "for _ in range(1000):\n",
     "    i = randint(0,8)\n",
-    "    fileA.write(listA[i])\n",
+    "    print(listA[i], file = fileA)\n",
+    "    \n",
     "\n",
     "fileA.close()"
    ]
@@ -79,19 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'LetterGrades.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      2\u001b[0m di\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mA+\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m4.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mA\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m3.75\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mB+\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m3.5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mB\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m3.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mC+\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m2.5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mC\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m2.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mD+\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m1.5\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mD\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m1.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m0.0\u001b[39m}\n\u001b[1;32m----> 3\u001b[0m fileB \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mLetterGrades.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m , \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m linw \u001b[39min\u001b[39;00m fileB:\n\u001b[0;32m      5\u001b[0m     i \u001b[39m=\u001b[39m fileB\u001b[39m.\u001b[39mreadline()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'LetterGrades.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.066\n"
      ]
     }
    ],
@@ -99,9 +95,14 @@
     "# YOUR CODE HERE\n",
     "di={\"A+\":4.0, \"A\":3.75, \"B+\":3.5, \"B\":3.0, \"C+\":2.5, \"C\":2.0, \"D+\":1.5,\"D\":1.0, \"F\":0.0}\n",
     "fileB = open(\"LetterGrades.txt\" , \"r\")\n",
-    "for line in fileB:\n",
-    "    i = fileB.readline()\n",
-    "    print(di.get(i, \"Invalid\"))\n"
+    "out = 0\n",
+    "for i in range(1000):\n",
+    "    i = fileB.readline().strip()\n",
+    "    i = di.get(str(i))\n",
+    "    i = int(i)\n",
+    "    out = out + i\n",
+    "GPA = out/1000\n",
+    "print(GPA)"
    ]
   },
   {
@@ -117,12 +118,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception has occered...\n",
+      "Valid float\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "def isFloat(string):\n"
+    "def isFloat(string):\n",
+    "    try:\n",
+    "        float(string)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        print(\"An exception has occered...\")\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    string = input(\"Enter a float: \")\n",
+    "    while not isFloat(string):\n",
+    "        string = input(\"Invalid. Enter a float: \")\n",
+    "    print(\"Valid float\")\n",
+    "\n",
+    "main()\n"
    ]
   }
  ],
